--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -12,8 +12,13 @@
 }
 
 .login_container {
-    border: 2px solid black;
-    background-color: rgba(50,100,50,0.9);
+    border-radius: 5px;
+    background-color: rgba(50,50,50,0.9);
     padding-left: 10px;
     padding-right: 10px;
+    color: white;
+}
+
+.login_form {
+    text-align: center;
 }
