added sign up page authentication code, added index page

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,4 +1,10 @@
-/* CSS for Login Page */
+/* Generic CSS */
+
+.center {
+    text-align: center;
+}
+
+/* CSS for Login Page and Sign Up pages */
 
 #background_image {
   background: url(https://source.unsplash.com/wajusTqz_FI);
