--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{{ the_title }}</title>
-   <link rel= "stylesheet" type= "text/css" href="static/styles/style.css">
-   <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
-   <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-   <script src="https://npmcdn.com/react-router@3.0.2/umd/ReactRouter.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ the_title }}</title>
+    <link rel= "stylesheet" type= "text/css" href="static/styles/style.css">
+    <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="https://npmcdn.com/react-router@3.0.2/umd/ReactRouter.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
   {% block body %}
 
   {% endblock %}
-  
+
+    <footer>
+        Copyright &copy; 2017 Mike Cuddy Productions<br>
+        <a href="mailto:mcuddy77@gmail.com">mcuddy77@gmail.com</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p>
+            <a href="https://github.com/ravenusmc"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/mcuddy1/"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+            <a href="https://codingsaga.wordpress.com/"><i class="fa fa-book fa-2x" aria-hidden="true"></i></a>
+        </p>
+    </footer>
+
   <script src="static/scripts/index.js"></script>
 </body>
 </html>
