added a game page

--- a/templates/game.html
+++ b/templates/game.html
@@ -12,7 +12,7 @@
             <li><a href="/index">General</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
             <li>Business</li>&nbsp;&nbsp;&nbsp;&nbsp;
             <li>Technology</li>&nbsp;&nbsp;&nbsp;&nbsp;
-            <li><a href="/games">Video Games</a></li>
+            <li>Video Games</li>
         </ul>
     </nav>
 
