added video game news page

--- a/templates/business.html
+++ b/templates/business.html
@@ -17,7 +17,7 @@
     </nav>
 
     <main>
-        <h1 class='center'>General Section</h1>
+        <h1 class='center'>Business Section</h1>
         <div class='top_level_column'>
 
             <!-- This news area is what will contain each news article -->
@@ -50,3 +50,4 @@
     </footer>
 
 {% endblock %}
+
