--- a/templates/game.html
+++ b/templates/game.html
@@ -17,7 +17,7 @@
     </nav>
 
     <main>
-        <h1 class='center'>General Section</h1>
+        <h1 class='center'>Video Game and Entertainment Section</h1>
         <div class='top_level_column'>
 
             <!-- This news area is what will contain each news article -->
@@ -37,5 +37,16 @@
 
         </div>
     </main>
+
+    <footer>
+        Copyright &copy; 2017 Mike Cuddy Productions<br>
+        <a href="mailto:mcuddy77@gmail.com">mcuddy77@gmail.com</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p>
+            <a href="https://github.com/ravenusmc"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/mcuddy1/"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+            <a href="https://codingsaga.wordpress.com/"><i class="fa fa-book fa-2x" aria-hidden="true"></i></a>
+        </p>
+    </footer>
 
 {% endblock %}
