added business and tech pages

--- a/templates/game.html
+++ b/templates/game.html
@@ -10,9 +10,9 @@
     <nav>
         <ul>
             <li><a href="/index">General</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
-            <li>Business</li>&nbsp;&nbsp;&nbsp;&nbsp;
-            <li>Technology</li>&nbsp;&nbsp;&nbsp;&nbsp;
-            <li>Video Games</li>
+            <li><a href='/business'>Business</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
+            <li><a href='/tech'>Technology</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
+            <li><a href="/games">Video Games</a></li>
         </ul>
     </nav>
 
