--- a/templates/business.html
+++ b/templates/business.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="/index">General</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
             <li><a href='/business'>Business</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
-            <li>Technology</li>&nbsp;&nbsp;&nbsp;&nbsp;
+            <li><a href='/tech'>Technology</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
             <li><a href="/games">Video Games</a></li>
         </ul>
     </nav>
