--- a/templates/tech.html
+++ b/templates/tech.html
@@ -17,7 +17,7 @@
     </nav>
 
     <main>
-        <h1 class='center'>General Section</h1>
+        <h1 class='center'>Technology Section</h1>
         <div class='top_level_column'>
 
             <!-- This news area is what will contain each news article -->
