--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,23 @@
 
 {% block body %}
 
-    <header>
-        <h1 class='center'>Welcome {{ username }}, to the News App!</h1>
-        <p class='center'>Finding the news you want in one location</p>
-    </header>
+    <div class='nav_header_container'>
 
-    <nav>
-        <ul>
-            <li><a href="/index">General</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
-            <li><a href='/business'>Business</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
-            <li><a href='/tech'>Technology</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
-            <li><a href="/games">Video Games</a></li>
-        </ul>
-    </nav>
+        <header>
+            <h1 class='center'>Welcome {{ username }}, to the News App!</h1>
+            <p class='center'>Finding the news you want in one location</p>
+        </header>
+
+        <nav>
+            <ul>
+                <li><a href="/index">General</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
+                <li><a href='/business'>Business</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
+                <li><a href='/tech'>Technology</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
+                <li><a href="/games">Video Games</a></li>
+            </ul>
+        </nav>
+
+    </div>
 
     <main>
         <h1 class='center'>General Section</h1>
