added logout feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,19 @@
 {% block body %}
 
     <div class='nav_header_container'>
-
         <header>
             <h1 class='center'>Welcome {{ username }}, to the News App!</h1>
             <p class='center'>Finding the news you want in one location</p>
         </header>
-
         <nav>
             <ul>
                 <li><a href="/index">General</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
                 <li><a href='/business'>Business</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
                 <li><a href='/tech'>Technology</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
-                <li><a href="/games">Video Games</a></li>
+                <li><a href="/games">Video Games</a></li>&nbsp;&nbsp;&nbsp;&nbsp;
+                <li><a href='/sign_out'>Sign Out</a></li>
             </ul>
         </nav>
-
     </div>
 
     <main>
