--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -11,8 +11,7 @@
     right: 0;
     left: 0;
     z-index: 1;
-    /*background: linear-gradient(to bottom, #b4ddb4 0%,#83c783 17%,#52b152 33%,#008a00 67%,#005700 83%,#002400 100%);*/
-    
+    background-color: white;
 }
 
 nav {
@@ -34,6 +33,12 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: #333;
+}
+
+nav ul li a:hover {
+    background-color: black;
+    color: white;
+    border-radius: 3px;
 }
 
 main {
@@ -112,6 +117,10 @@ header p {
 
 /* CSS for Media Queries */
 @media only all and (max-width: 768px){
+
+    main {
+        margin-top: 400px;
+    }
 
     nav ul li {
         display: block;
